fix deprecated gradle properties change Base64 library